mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtrees-mysql
  labels:
    app: webtrees
spec:
  ports:
    - port: 3306
  selector:
    app: webtrees
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: webtrees-mysql
  labels:
    app: webtrees
spec:
  selector:
    matchLabels:
      app: webtrees
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: webtrees
        tier: mysql
    spec:
      containers:
      - image: mariadb:latest
        name: mariadb
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
