quayfm.yaml
apiVersion: v1
kind: Service
metadata:
  name: quayfm-proxy
spec:
  type: ExternalName
  externalName: stream.quayfm.gg
