webtrees-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtrees
  labels:
    app: webtrees
spec:
  ports:
    - port: 80
  selector:
    app: webtrees
    tier: frontend
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: webtrees
  labels:
    app: webtrees
spec:
  selector:
    matchLabels:
      app: webtrees
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: webtrees
        tier: frontend
    spec:
      containers:
      - image: briggysmalls/personal-webtrees:latest
        name: webtrees
        ports:
        - containerPort: 80
          name: webtrees
        volumeMounts:
        - name: webtrees-persistent-storage-data
          mountPath: /var/www/webtrees/data/
        - name: webtrees-persistent-storage-media
          mountPath: /var/www/webtrees/media/
      volumes:
      - name: webtrees-persistent-storage-data
        persistentVolumeClaim:
          claimName: wt-pv-claim-data
      - name: webtrees-persistent-storage-media
        persistentVolumeClaim:
          claimName: wt-pv-claim-media
