ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: proxy
spec:
  rules:
  - host: "apps.sambriggs.dev"
    http:
      paths:
      - backend:
          service:
            name: webtrees
            port: 80
        path: /
